
Last changelog
==============

Version 4.5.1
-----------------------------
**Improvements**

* Upgrade Spring framework to 4.1.0.RELEASE
* Adding scheduler unit tests
* Project page could be exported into pdf format
* Project time logging is displayed in multiple layouts

**Bug Fixes**

* Save task in task read view throws exception
* Inconsistent time logging permission

Version 4.5.0
-----------------------------
**Improvements**

* Upgrade libraries versions
* Revise project time tracking view
* Support version management in project page
* Support date format associate to user's locale
* Break mobile app into 2 sub apps: CRM and Project Management
* Reload site after user change information to make this change is applied immediately
* Improve error handling in event bus implementation
* The project time tracking views support multiple views
* Create the default task group when user create the new project
* Support more search criteria for bug
* Support display inline more image file types different than jpg/png

**Bug Fixes**

* Page path is cached across projects
* Milestone simple view display wrongly
* Display date time field correctly with user custom timezone
* Can not display username in phase detail view if the display name is empty
* Log user is removed when user update task status
* Can not trace activity when user update several kinds of items

Version 4.4.0
-----------------------------
**Improvements**

* Add new page composer in project module
* Allow users can archive project
* Revise milestone list view to allow user can edit, delete milestone
* Revise invite project member that displays user avatar in suggested list
* Display total open bugs, due bugs in bug dashboard
* Clean user session resources properly
* Optimize image sizes

**Bug Fixes**

* Tooptip use the default system language instead of user defined language
* Component and Version do not show the marker of complete right